--- a/src/gallery/index.pug
+++ b/src/gallery/index.pug
@@ -8,56 +8,351 @@ html
 			.cover
 				h1 Etno Motivi
 			.gallery
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
+				button(data-id="etnomodeli1").item
+				button(data-id="etnomodeli2").item
+				button(data-id="etnomodeli3").item
+				button(data-id="etnomodeli4").item
+				button(data-id="etnomodeli5").item
+				button(data-id="etnomodeli6").item
+				button(data-id="etnomodeli7").item
+				button(data-id="etnomodeli8").item
+				button(data-id="etnomodeli9").item
+				button(data-id="etnomodeli10").item
+				button(data-id="etnomodeli11").item
+				button(data-id="etnomodeli12").item
+				button(data-id="etnomodeli13").item
+				button(data-id="etnomodeli14").item
+				button(data-id="etnomodeli15").item
+				button(data-id="etnomodeli16").item
+				button(data-id="etnomodeli17").item
+				button(data-id="etnomodeli18").item
+				button(data-id="etnomodeli19").item
+				button(data-id="etnomodeli20").item
+				button(data-id="etnomodeli21").item
+				button(data-id="etnomodeli22").item
+				button(data-id="etnomodeli23").item
+				button(data-id="etnomodeli24").item
+				button(data-id="etnomodeli25").item
+				button(data-id="etnomodeli26").item
+				button(data-id="etnomodeli27").item
+				button(data-id="etnomodeli28").item
+				button(data-id="etnomodeli29").item
+				button(data-id="etnomodeli30").item
+				button(data-id="etnomodeli31").item
+				button(data-id="etnomodeli32").item
+				button(data-id="etnomodeli33").item
+				button(data-id="etnomodeli34").item
+				button(data-id="etnomodeli35").item
+				button(data-id="etnomodeli36").item
+				button(data-id="etnomodeli37").item
 		.section#planine
 			.cover
 				h1 Planine i Banje
 			.gallery
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
+				button(data-id="planine1").item
+				button(data-id="planine2").item
+				button(data-id="planine3").item
+				button(data-id="planine4").item
+				button(data-id="planine5").item
+				button(data-id="planine6").item
+				button(data-id="planine7").item
+				button(data-id="planine8").item
+				button(data-id="planine9").item
+				button(data-id="planine10").item
+				button(data-id="planine11").item
+				button(data-id="planine12").item
+				button(data-id="planine13").item
+				button(data-id="planine14").item
+				button(data-id="planine15").item
+				button(data-id="planine16").item
+				button(data-id="planine17").item
+				button(data-id="planine18").item
+				button(data-id="planine19").item
+				button(data-id="planine20").item
+				button(data-id="planine21").item
+				button(data-id="planine22").item
+				button(data-id="planine23").item
+				button(data-id="planine24").item
+				button(data-id="planine25").item
+				button(data-id="planine26").item
+				button(data-id="planine27").item
+				button(data-id="planine28").item
+				button(data-id="planine29").item
+				button(data-id="planine30").item
+				button(data-id="planine31").item
+				button(data-id="planine32").item
+				button(data-id="planine33").item
+				button(data-id="planine34").item
+				button(data-id="planine35").item
+				button(data-id="planine36").item
+				button(data-id="planine37").item
+				button(data-id="planine38").item
+				button(data-id="planine39").item
+				button(data-id="planine40").item
+				button(data-id="planine41").item
+				button(data-id="planine42").item
+				button(data-id="planine43").item
+				button(data-id="planine44").item
+				button(data-id="planine45").item
+				button(data-id="planine46").item
+				button(data-id="planine47").item
+				button(data-id="planine48").item
+				button(data-id="planine49").item
+				button(data-id="planine50").item
+				button(data-id="planine51").item
+				button(data-id="planine52").item
+				button(data-id="planine53").item
+				button(data-id="planine54").item
+				button(data-id="planine55").item
+				button(data-id="planine56").item
+				button(data-id="planine57").item
+				button(data-id="planine58").item
+				button(data-id="planine59").item
+				button(data-id="planine60").item
+				button(data-id="planine61").item
+				button(data-id="planine62").item
+				button(data-id="planine63").item
 		.section#morski
 			.cover
 				h1 Morski Motivi
 			.gallery
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
-				img(src='').item
+				button(data-id="morski1").item
+				button(data-id="morski2").item
+				button(data-id="morski3").item
+				button(data-id="morski4").item
+				button(data-id="morski5").item
+				button(data-id="morski6").item
+				button(data-id="morski7").item
+				button(data-id="morski8").item
+				button(data-id="morski9").item
+				button(data-id="morski10").item
+				button(data-id="morski11").item
+				button(data-id="morski12").item
+				button(data-id="morski13").item
+				button(data-id="morski14").item
+				button(data-id="morski15").item
+				button(data-id="morski16").item
+				button(data-id="morski17").item
+				button(data-id="morski18").item
+				button(data-id="morski19").item
+				button(data-id="morski20").item
+				button(data-id="morski21").item
+				button(data-id="morski22").item
+				button(data-id="morski23").item
+				button(data-id="morski24").item
+				button(data-id="morski25").item
+				button(data-id="morski26").item
+				button(data-id="morski27").item
+				button(data-id="morski28").item
+				button(data-id="morski29").item
+				button(data-id="morski30").item
+				button(data-id="morski31").item
+				button(data-id="morski32").item
+				button(data-id="morski33").item
+				button(data-id="morski34").item
+				button(data-id="morski35").item
+				button(data-id="morski36").item
+				button(data-id="morski37").item
+				button(data-id="morski38").item
+				button(data-id="morski39").item
+				button(data-id="morski40").item
+				button(data-id="morski41").item
+		.section#piksle
+			.cover
+				h1 Piksle
+			.gallery
+				button(data-id="piksle1").item
+				button(data-id="piksle2").item
+				button(data-id="piksle3").item
+				button(data-id="piksle4").item
+				button(data-id="piksle5").item
+				button(data-id="piksle6").item
+				button(data-id="piksle7").item
+				button(data-id="piksle8").item
+				button(data-id="piksle9").item
+				button(data-id="piksle10").item
+				button(data-id="piksle11").item
+				button(data-id="piksle12").item
+				button(data-id="piksle13").item
+				button(data-id="piksle14").item
+				button(data-id="piksle15").item
+				button(data-id="piksle16").item
+				button(data-id="piksle17").item
+				button(data-id="piksle18").item
+				button(data-id="piksle19").item
+				button(data-id="piksle20").item
+				button(data-id="piksle21").item
+				button(data-id="piksle22").item
+				button(data-id="piksle23").item
+				button(data-id="piksle24").item
+				button(data-id="piksle25").item
+				button(data-id="piksle26").item
+		.modalbox
+			button#exit
+			img(src='images/etno/1.jpg').item#etnomodeli1
+			img(src='images/etno/2.jpg').item#etnomodeli2
+			img(src='images/etno/3.jpg').item#etnomodeli3
+			img(src='images/etno/4.jpg').item#etnomodeli4
+			img(src='images/etno/5.jpg').item#etnomodeli5
+			img(src='images/etno/6.jpg').item#etnomodeli6
+			img(src='images/etno/7.jpg').item#etnomodeli7
+			img(src='images/etno/8.jpg').item#etnomodeli8
+			img(src='images/etno/9.jpg').item#etnomodeli9
+			img(src='images/etno/10.jpg').item#etnomodeli10
+			img(src='images/etno/11.jpg').item#etnomodeli11
+			img(src='images/etno/12.jpg').item#etnomodeli12
+			img(src='images/etno/13.jpg').item#etnomodeli13
+			img(src='images/etno/14.jpg').item#etnomodeli14
+			img(src='images/etno/15.jpg').item#etnomodeli15
+			img(src='images/etno/16.jpg').item#etnomodeli16
+			img(src='images/etno/17.jpg').item#etnomodeli17
+			img(src='images/etno/18.jpg').item#etnomodeli18
+			img(src='images/etno/19.jpg').item#etnomodeli19
+			img(src='images/etno/20.jpg').item#etnomodeli20
+			img(src='images/etno/21.jpg').item#etnomodeli21
+			img(src='images/etno/22.jpg').item#etnomodeli22
+			img(src='images/etno/23.jpg').item#etnomodeli23
+			img(src='images/etno/24.jpg').item#etnomodeli24
+			img(src='images/etno/25.jpg').item#etnomodeli25
+			img(src='images/etno/26.jpg').item#etnomodeli26
+			img(src='images/etno/27.jpg').item#etnomodeli27
+			img(src='images/etno/28.jpg').item#etnomodeli28
+			img(src='images/etno/29.jpg').item#etnomodeli29
+			img(src='images/etno/30.jpg').item#etnomodeli30
+			img(src='images/etno/31.jpg').item#etnomodeli31
+			img(src='images/etno/32.jpg').item#etnomodeli32
+			img(src='images/etno/33.jpg').item#etnomodeli33
+			img(src='images/etno/34.jpg').item#etnomodeli34
+			img(src='images/etno/35.jpg').item#etnomodeli35
+			img(src='images/etno/36.jpg').item#etnomodeli36
+			img(src='images/etno/37.jpg').item#etnomodeli37
+			img(src='images/planine/1.jpg').item#planine1
+			img(src='images/planine/2.jpg').item#planine2
+			img(src='images/planine/3.jpg').item#planine3
+			img(src='images/planine/4.jpg').item#planine4
+			img(src='images/planine/5.jpg').item#planine5
+			img(src='images/planine/6.jpg').item#planine6
+			img(src='images/planine/7.jpg').item#planine7
+			img(src='images/planine/8.jpg').item#planine8
+			img(src='images/planine/9.jpg').item#planine9
+			img(src='images/planine/10.jpg').item#planine10
+			img(src='images/planine/11.jpg').item#planine11
+			img(src='images/planine/12.jpg').item#planine12
+			img(src='images/planine/13.jpg').item#planine13
+			img(src='images/planine/14.jpg').item#planine14
+			img(src='images/planine/15.jpg').item#planine15
+			img(src='images/planine/16.jpg').item#planine16
+			img(src='images/planine/17.jpg').item#planine17
+			img(src='images/planine/18.jpg').item#planine18
+			img(src='images/planine/19.jpg').item#planine19
+			img(src='images/planine/20.jpg').item#planine20
+			img(src='images/planine/21.jpg').item#planine21
+			img(src='images/planine/22.jpg').item#planine22
+			img(src='images/planine/23.jpg').item#planine23
+			img(src='images/planine/24.jpg').item#planine24
+			img(src='images/planine/25.jpg').item#planine25
+			img(src='images/planine/26.jpg').item#planine26
+			img(src='images/planine/27.jpg').item#planine27
+			img(src='images/planine/28.jpg').item#planine28
+			img(src='images/planine/29.jpg').item#planine29
+			img(src='images/planine/30.jpg').item#planine30
+			img(src='images/planine/31.jpg').item#planine31
+			img(src='images/planine/32.jpg').item#planine32
+			img(src='images/planine/33.jpg').item#planine33
+			img(src='images/planine/34.jpg').item#planine34
+			img(src='images/planine/35.jpg').item#planine35
+			img(src='images/planine/36.jpg').item#planine36
+			img(src='images/planine/37.jpg').item#planine37
+			img(src='images/planine/38.jpg').item#planine38
+			img(src='images/planine/39.jpg').item#planine39
+			img(src='images/planine/40.jpg').item#planine40
+			img(src='images/planine/41.jpg').item#planine41
+			img(src='images/planine/42.jpg').item#planine42
+			img(src='images/planine/43.jpg').item#planine43
+			img(src='images/planine/44.jpg').item#planine44
+			img(src='images/planine/45.jpg').item#planine45
+			img(src='images/planine/46.jpg').item#planine46
+			img(src='images/planine/47.jpg').item#planine47
+			img(src='images/planine/48.jpg').item#planine48
+			img(src='images/planine/49.jpg').item#planine49
+			img(src='images/planine/50.jpg').item#planine50
+			img(src='images/planine/51.jpg').item#planine51
+			img(src='images/planine/52.jpg').item#planine52
+			img(src='images/planine/53.jpg').item#planine53
+			img(src='images/planine/54.jpg').item#planine54
+			img(src='images/planine/55.jpg').item#planine55
+			img(src='images/planine/56.jpg').item#planine56
+			img(src='images/planine/57.jpg').item#planine57
+			img(src='images/planine/58.jpg').item#planine58
+			img(src='images/planine/59.jpg').item#planine59
+			img(src='images/planine/60.jpg').item#planine60
+			img(src='images/planine/61.jpg').item#planine61
+			img(src='images/planine/62.jpg').item#planine62
+			img(src='images/planine/63.jpg').item#planine63
+			img(src='images/morski/1.jpg').item#morski1
+			img(src='images/morski/2.jpg').item#morski2
+			img(src='images/morski/3.jpg').item#morski3
+			img(src='images/morski/4.jpg').item#morski4
+			img(src='images/morski/5.jpg').item#morski5
+			img(src='images/morski/6.jpg').item#morski6
+			img(src='images/morski/7.jpg').item#morski7
+			img(src='images/morski/8.jpg').item#morski8
+			img(src='images/morski/9.jpg').item#morski9
+			img(src='images/morski/10.jpg').item#morski10
+			img(src='images/morski/11.jpg').item#morski11
+			img(src='images/morski/12.jpg').item#morski12
+			img(src='images/morski/13.jpg').item#morski13
+			img(src='images/morski/14.jpg').item#morski14
+			img(src='images/morski/15.jpg').item#morski15
+			img(src='images/morski/16.jpg').item#morski16
+			img(src='images/morski/17.jpg').item#morski17
+			img(src='images/morski/18.jpg').item#morski18
+			img(src='images/morski/19.jpg').item#morski19
+			img(src='images/morski/20.jpg').item#morski20
+			img(src='images/morski/21.jpg').item#morski21
+			img(src='images/morski/22.jpg').item#morski22
+			img(src='images/morski/23.jpg').item#morski23
+			img(src='images/morski/24.jpg').item#morski24
+			img(src='images/morski/25.jpg').item#morski25
+			img(src='images/morski/26.jpg').item#morski26
+			img(src='images/morski/27.jpg').item#morski27
+			img(src='images/morski/28.jpg').item#morski28
+			img(src='images/morski/29.jpg').item#morski29
+			img(src='images/morski/30.jpg').item#morski30
+			img(src='images/morski/31.jpg').item#morski31
+			img(src='images/morski/32.jpg').item#morski32
+			img(src='images/morski/33.jpg').item#morski33
+			img(src='images/morski/34.jpg').item#morski34
+			img(src='images/morski/35.jpg').item#morski35
+			img(src='images/morski/36.jpg').item#morski36
+			img(src='images/morski/37.jpg').item#morski37
+			img(src='images/morski/38.jpg').item#morski38
+			img(src='images/morski/39.jpg').item#morski39
+			img(src='images/morski/40.jpg').item#morski40
+			img(src='images/morski/41.jpg').item#morski41
+			img(src='images/piksle/1.jpg').item#piksle1
+			img(src='images/piksle/2.jpg').item#piksle2
+			img(src='images/piksle/3.jpg').item#piksle3
+			img(src='images/piksle/4.jpg').item#piksle4
+			img(src='images/piksle/5.jpg').item#piksle5
+			img(src='images/piksle/6.jpg').item#piksle6
+			img(src='images/piksle/7.jpg').item#piksle7
+			img(src='images/piksle/8.jpg').item#piksle8
+			img(src='images/piksle/9.jpg').item#piksle9
+			img(src='images/piksle/10.jpg').item#piksle10
+			img(src='images/piksle/11.jpg').item#piksle11
+			img(src='images/piksle/12.jpg').item#piksle12
+			img(src='images/piksle/13.jpg').item#piksle13
+			img(src='images/piksle/14.jpg').item#piksle14
+			img(src='images/piksle/15.jpg').item#piksle15
+			img(src='images/piksle/16.jpg').item#piksle16
+			img(src='images/piksle/17.jpg').item#piksle17
+			img(src='images/piksle/18.jpg').item#piksle18
+			img(src='images/piksle/19.jpg').item#piksle19
+			img(src='images/piksle/20.jpg').item#piksle20
+			img(src='images/piksle/21.jpg').item#piksle21
+			img(src='images/piksle/22.jpg').item#piksle22
+			img(src='images/piksle/23.jpg').item#piksle23
+			img(src='images/piksle/24.jpg').item#piksle24
+			img(src='images/piksle/25.jpg').item#piksle25
+			img(src='images/piksle/26.jpg').item#piksle26
