--- a/src/gallery/sass/section.sass
+++ b/src/gallery/sass/section.sass
@@ -27,7 +27,6 @@
 			font-family: 'AfterSchool'
 			letter-spacing: 15px
 	.gallery
-		height: 100vh
 		width: 960px
 		margin: 20px auto 0 auto
 		display: flex
@@ -37,17 +36,361 @@
 			margin: 5px
 			width: 200px
 			height: 200px
-			background-color: pink
-			opacity:
-#etnomodeli
+		button
+			background:
+				size: 100% 100%
+			border: none
+			&:focus
+				outline: none
+			&:hover
+				cursor: pointer
+		button[data-id="etnomodeli1"]
+			background-image: url(../imagesmini/etno/1.jpg)
+		button[data-id="etnomodeli2"]
+			background-image: url(../imagesmini/etno/2.jpg)
+		button[data-id="etnomodeli3"]
+			background-image: url(../imagesmini/etno/3.jpg)
+		button[data-id="etnomodeli4"]
+			background-image: url(../imagesmini/etno/4.jpg)
+		button[data-id="etnomodeli5"]
+			background-image: url(../imagesmini/etno/5.jpg)
+		button[data-id="etnomodeli6"]
+			background-image: url(../imagesmini/etno/6.jpg)
+		button[data-id="etnomodeli7"]
+			background-image: url(../imagesmini/etno/7.jpg)
+		button[data-id="etnomodeli8"]
+			background-image: url(../imagesmini/etno/8.jpg)
+		button[data-id="etnomodeli9"]
+			background-image: url(../imagesmini/etno/9.jpg)
+		button[data-id="etnomodeli10"]
+			background-image: url(../imagesmini/etno/10.jpg)
+		button[data-id="etnomodeli11"]
+			background-image: url(../imagesmini/etno/11.jpg)
+		button[data-id="etnomodeli12"]
+			background-image: url(../imagesmini/etno/12.jpg)
+		button[data-id="etnomodeli13"]
+			background-image: url(../imagesmini/etno/13.jpg)
+		button[data-id="etnomodeli14"]
+			background-image: url(../imagesmini/etno/14.jpg)
+		button[data-id="etnomodeli15"]
+			background-image: url(../imagesmini/etno/15.jpg)
+		button[data-id="etnomodeli16"]
+			background-image: url(../imagesmini/etno/16.jpg)
+		button[data-id="etnomodeli17"]
+			background-image: url(../imagesmini/etno/17.jpg)
+		button[data-id="etnomodeli18"]
+			background-image: url(../imagesmini/etno/18.jpg)
+		button[data-id="etnomodeli19"]
+			background-image: url(../imagesmini/etno/19.jpg)
+		button[data-id="etnomodeli20"]
+			background-image: url(../imagesmini/etno/20.jpg)
+		button[data-id="etnomodeli21"]
+			background-image: url(../imagesmini/etno/21.jpg)
+		button[data-id="etnomodeli22"]
+			background-image: url(../imagesmini/etno/22.jpg)
+		button[data-id="etnomodeli23"]
+			background-image: url(../imagesmini/etno/23.jpg)
+		button[data-id="etnomodeli24"]
+			background-image: url(../imagesmini/etno/24.jpg)
+		button[data-id="etnomodeli25"]
+			background-image: url(../imagesmini/etno/25.jpg)
+		button[data-id="etnomodeli26"]
+			background-image: url(../imagesmini/etno/26.jpg)
+		button[data-id="etnomodeli27"]
+			background-image: url(../imagesmini/etno/27.jpg)
+		button[data-id="etnomodeli28"]
+			background-image: url(../imagesmini/etno/28.jpg)
+		button[data-id="etnomodeli29"]
+			background-image: url(../imagesmini/etno/29.jpg)
+		button[data-id="etnomodeli30"]
+			background-image: url(../imagesmini/etno/30.jpg)
+		button[data-id="etnomodeli31"]
+			background-image: url(../imagesmini/etno/31.jpg)
+		button[data-id="etnomodeli32"]
+			background-image: url(../imagesmini/etno/32.jpg)
+		button[data-id="etnomodeli33"]
+			background-image: url(../imagesmini/etno/33.jpg)
+		button[data-id="etnomodeli34"]
+			background-image: url(../imagesmini/etno/34.jpg)
+		button[data-id="etnomodeli35"]
+			background-image: url(../imagesmini/etno/35.jpg)
+		button[data-id="etnomodeli36"]
+			background-image: url(../imagesmini/etno/36.jpg)
+		button[data-id="etnomodeli37"]
+			background-image: url(../imagesmini/planine/37.jpg)
+		button[data-id="planine1"]
+			background-image: url(../imagesmini/planine/1.jpg)
+		button[data-id="planine2"]
+			background-image: url(../imagesmini/planine/2.jpg)
+		button[data-id="planine3"]
+			background-image: url(../imagesmini/planine/3.jpg)
+		button[data-id="planine4"]
+			background-image: url(../imagesmini/planine/4.jpg)
+		button[data-id="planine5"]
+			background-image: url(../imagesmini/planine/5.jpg)
+		button[data-id="planine6"]
+			background-image: url(../imagesmini/planine/6.jpg)
+		button[data-id="planine7"]
+			background-image: url(../imagesmini/planine/7.jpg)
+		button[data-id="planine8"]
+			background-image: url(../imagesmini/planine/8.jpg)
+		button[data-id="planine9"]
+			background-image: url(../imagesmini/planine/9.jpg)
+		button[data-id="planine10"]
+			background-image: url(../imagesmini/planine/10.jpg)
+		button[data-id="planine11"]
+			background-image: url(../imagesmini/planine/11.jpg)
+		button[data-id="planine12"]
+			background-image: url(../imagesmini/planine/12.jpg)
+		button[data-id="planine13"]
+			background-image: url(../imagesmini/planine/13.jpg)
+		button[data-id="planine14"]
+			background-image: url(../imagesmini/planine/14.jpg)
+		button[data-id="planine15"]
+			background-image: url(../imagesmini/planine/15.jpg)
+		button[data-id="planine16"]
+			background-image: url(../imagesmini/planine/16.jpg)
+		button[data-id="planine17"]
+			background-image: url(../imagesmini/planine/17.jpg)
+		button[data-id="planine18"]
+			background-image: url(../imagesmini/planine/18.jpg)
+		button[data-id="planine19"]
+			background-image: url(../imagesmini/planine/19.jpg)
+		button[data-id="planine20"]
+			background-image: url(../imagesmini/planine/20.jpg)
+		button[data-id="planine21"]
+			background-image: url(../imagesmini/planine/21.jpg)
+		button[data-id="planine22"]
+			background-image: url(../imagesmini/planine/22.jpg)
+		button[data-id="planine23"]
+			background-image: url(../imagesmini/planine/23.jpg)
+		button[data-id="planine24"]
+			background-image: url(../imagesmini/planine/24.jpg)
+		button[data-id="planine25"]
+			background-image: url(../imagesmini/planine/25.jpg)
+		button[data-id="planine26"]
+			background-image: url(../imagesmini/planine/26.jpg)
+		button[data-id="planine27"]
+			background-image: url(../imagesmini/planine/27.jpg)
+		button[data-id="planine28"]
+			background-image: url(../imagesmini/planine/28.jpg)
+		button[data-id="planine29"]
+			background-image: url(../imagesmini/planine/29.jpg)
+		button[data-id="planine30"]
+			background-image: url(../imagesmini/planine/30.jpg)
+		button[data-id="planine31"]
+			background-image: url(../imagesmini/planine/31.jpg)
+		button[data-id="planine32"]
+			background-image: url(../imagesmini/planine/32.jpg)
+		button[data-id="planine33"]
+			background-image: url(../imagesmini/planine/33.jpg)
+		button[data-id="planine34"]
+			background-image: url(../imagesmini/planine/34.jpg)
+		button[data-id="planine35"]
+			background-image: url(../imagesmini/planine/35.jpg)
+		button[data-id="planine36"]
+			background-image: url(../imagesmini/planine/36.jpg)
+		button[data-id="planine37"]
+			background-image: url(../imagesmini/planine/37.jpg)
+		button[data-id="planine38"]
+			background-image: url(../imagesmini/planine/38.jpg)
+		button[data-id="planine39"]
+			background-image: url(../imagesmini/planine/39.jpg)
+		button[data-id="planine40"]
+			background-image: url(../imagesmini/planine/40.jpg)
+		button[data-id="planine41"]
+			background-image: url(../imagesmini/planine/41.jpg)
+		button[data-id="planine42"]
+			background-image: url(../imagesmini/planine/42.jpg)
+		button[data-id="planine43"]
+			background-image: url(../imagesmini/planine/43.jpg)
+		button[data-id="planine44"]
+			background-image: url(../imagesmini/planine/44.jpg)
+		button[data-id="planine45"]
+			background-image: url(../imagesmini/planine/45.jpg)
+		button[data-id="planine46"]
+			background-image: url(../imagesmini/planine/46.jpg)
+		button[data-id="planine47"]
+			background-image: url(../imagesmini/planine/47.jpg)
+		button[data-id="planine48"]
+			background-image: url(../imagesmini/planine/48.jpg)
+		button[data-id="planine49"]
+			background-image: url(../imagesmini/planine/49.jpg)
+		button[data-id="planine50"]
+			background-image: url(../imagesmini/planine/50.jpg)
+		button[data-id="planine51"]
+			background-image: url(../imagesmini/planine/51.jpg)
+		button[data-id="planine52"]
+			background-image: url(../imagesmini/planine/52.jpg)
+		button[data-id="planine53"]
+			background-image: url(../imagesmini/planine/53.jpg)
+		button[data-id="planine54"]
+			background-image: url(../imagesmini/planine/54.jpg)
+		button[data-id="planine55"]
+			background-image: url(../imagesmini/planine/55.jpg)
+		button[data-id="planine56"]
+			background-image: url(../imagesmini/planine/56.jpg)
+		button[data-id="planine57"]
+			background-image: url(../imagesmini/planine/57.jpg)
+		button[data-id="planine58"]
+			background-image: url(../imagesmini/planine/58.jpg)
+		button[data-id="planine59"]
+			background-image: url(../imagesmini/planine/59.jpg)
+		button[data-id="planine60"]
+			background-image: url(../imagesmini/planine/60.jpg)
+		button[data-id="planine61"]
+			background-image: url(../imagesmini/planine/61.jpg)
+		button[data-id="planine62"]
+			background-image: url(../imagesmini/planine/62.jpg)
+		button[data-id="planine63"]
+			background-image: url(../imagesmini/planine/63.jpg)
+		button[data-id="morski1"]
+			background-image: url(../imagesmini/morski/1.jpg)
+		button[data-id="morski2"]
+			background-image: url(../imagesmini/morski/2.jpg)
+		button[data-id="morski3"]
+			background-image: url(../imagesmini/morski/3.jpg)
+		button[data-id="morski4"]
+			background-image: url(../imagesmini/morski/4.jpg)
+		button[data-id="morski5"]
+			background-image: url(../imagesmini/morski/5.jpg)
+		button[data-id="morski6"]
+			background-image: url(../imagesmini/morski/6.jpg)
+		button[data-id="morski7"]
+			background-image: url(../imagesmini/morski/7.jpg)
+		button[data-id="morski8"]
+			background-image: url(../imagesmini/morski/8.jpg)
+		button[data-id="morski9"]
+			background-image: url(../imagesmini/morski/9.jpg)
+		button[data-id="morski10"]
+			background-image: url(../imagesmini/morski/10.jpg)
+		button[data-id="morski11"]
+			background-image: url(../imagesmini/morski/11.jpg)
+		button[data-id="morski12"]
+			background-image: url(../imagesmini/morski/12.jpg)
+		button[data-id="morski13"]
+			background-image: url(../imagesmini/morski/13.jpg)
+		button[data-id="morski14"]
+			background-image: url(../imagesmini/morski/14.jpg)
+		button[data-id="morski15"]
+			background-image: url(../imagesmini/morski/15.jpg)
+		button[data-id="morski16"]
+			background-image: url(../imagesmini/morski/16.jpg)
+		button[data-id="morski17"]
+			background-image: url(../imagesmini/morski/17.jpg)
+		button[data-id="morski18"]
+			background-image: url(../imagesmini/morski/18.jpg)
+		button[data-id="morski19"]
+			background-image: url(../imagesmini/morski/19.jpg)
+		button[data-id="morski20"]
+			background-image: url(../imagesmini/morski/20.jpg)
+		button[data-id="morski21"]
+			background-image: url(../imagesmini/morski/21.jpg)
+		button[data-id="morski22"]
+			background-image: url(../imagesmini/morski/22.jpg)
+		button[data-id="morski23"]
+			background-image: url(../imagesmini/morski/23.jpg)
+		button[data-id="morski24"]
+			background-image: url(../imagesmini/morski/24.jpg)
+		button[data-id="morski25"]
+			background-image: url(../imagesmini/morski/25.jpg)
+		button[data-id="morski26"]
+			background-image: url(../imagesmini/morski/26.jpg)
+		button[data-id="morski27"]
+			background-image: url(../imagesmini/morski/27.jpg)
+		button[data-id="morski28"]
+			background-image: url(../imagesmini/morski/28.jpg)
+		button[data-id="morski29"]
+			background-image: url(../imagesmini/morski/29.jpg)
+		button[data-id="morski30"]
+			background-image: url(../imagesmini/morski/30.jpg)
+		button[data-id="morski31"]
+			background-image: url(../imagesmini/morski/31.jpg)
+		button[data-id="morski32"]
+			background-image: url(../imagesmini/morski/32.jpg)
+		button[data-id="morski33"]
+			background-image: url(../imagesmini/morski/33.jpg)
+		button[data-id="morski34"]
+			background-image: url(../imagesmini/morski/34.jpg)
+		button[data-id="morski35"]
+			background-image: url(../imagesmini/morski/35.jpg)
+		button[data-id="morski36"]
+			background-image: url(../imagesmini/morski/36.jpg)
+		button[data-id="morski37"]
+			background-image: url(../imagesmini/morski/37.jpg)
+		button[data-id="morski38"]
+			background-image: url(../imagesmini/morski/38.jpg)
+		button[data-id="morski39"]
+			background-image: url(../imagesmini/morski/39.jpg)
+		button[data-id="morski40"]
+			background-image: url(../imagesmini/morski/40.jpg)
+		button[data-id="morski41"]
+			background-image: url(../imagesmini/morski/41.jpg)
+		button[data-id="piksle1"]
+			background-image: url(../imagesmini/piksle/1.jpg)
+		button[data-id="piksle2"]
+			background-image: url(../imagesmini/piksle/2.jpg)
+		button[data-id="piksle3"]
+			background-image: url(../imagesmini/piksle/3.jpg)
+		button[data-id="piksle4"]
+			background-image: url(../imagesmini/piksle/4.jpg)
+		button[data-id="piksle5"]
+			background-image: url(../imagesmini/piksle/5.jpg)
+		button[data-id="piksle6"]
+			background-image: url(../imagesmini/piksle/6.jpg)
+		button[data-id="piksle7"]
+			background-image: url(../imagesmini/piksle/7.jpg)
+		button[data-id="piksle8"]
+			background-image: url(../imagesmini/piksle/8.jpg)
+		button[data-id="piksle9"]
+			background-image: url(../imagesmini/piksle/9.jpg)
+		button[data-id="piksle10"]
+			background-image: url(../imagesmini/piksle/10.jpg)
+		button[data-id="piksle11"]
+			background-image: url(../imagesmini/piksle/11.jpg)
+		button[data-id="piksle12"]
+			background-image: url(../imagesmini/piksle/12.jpg)
+		button[data-id="piksle13"]
+			background-image: url(../imagesmini/piksle/13.jpg)
+		button[data-id="piksle14"]
+			background-image: url(../imagesmini/piksle/14.jpg)
+		button[data-id="piksle15"]
+			background-image: url(../imagesmini/piksle/15.jpg)
+		button[data-id="piksle16"]
+			background-image: url(../imagesmini/piksle/16.jpg)
+		button[data-id="piksle17"]
+			background-image: url(../imagesmini/piksle/17.jpg)
+		button[data-id="piksle18"]
+			background-image: url(../imagesmini/piksle/18.jpg)
+		button[data-id="piksle19"]
+			background-image: url(../imagesmini/piksle/19.jpg)
+		button[data-id="piksle20"]
+			background-image: url(../imagesmini/piksle/20.jpg)
+		button[data-id="piksle21"]
+			background-image: url(../imagesmini/piksle/21.jpg)
+		button[data-id="piksle22"]
+			background-image: url(../imagesmini/piksle/22.jpg)
+		button[data-id="piksle23"]
+			background-image: url(../imagesmini/piksle/23.jpg)
+		button[data-id="piksle24"]
+			background-image: url(../imagesmini/piksle/24.jpg)
+		button[data-id="piksle25"]
+			background-image: url(../imagesmini/piksle/25.jpg)
+		button[data-id="piksle26"]
+			background-image: url(../imagesmini/piksle/26.jpg)
+#etno
 	.cover
 		background:
-			image: url(../images/etno/cover2.jpg)
+			image: url(../images/etno/cover.jpg)
 #planine
 	.cover
 		background:
-			image: url(../images/planine/cover2.jpg)
+			image: url(../images/planine/cover.jpg)
 #morski
 	.cover
 		background: 
-			image: url(../images/morski/cover2.jpg)
+			image: url(../images/morski/cover.jpg)
+#piksle
+	.cover
+		background: 
+			image: url(../images/piksle/cover.jpg)
